tests/snapshots/serde__de_circular_reference_multi.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = { b: {} }; a.b.a = a; a"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("b"): HeapReference(
            *1,
        ),
    },
    1: Object {
        OneByte("a"): HeapReference(
            *0,
        ),
    },
}

