tests/snapshots/serde__de_dataview_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new DataView(new ArrayBuffer(2, { maxByteLength: 10 })); a.setUint8(0, 1); a"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            0,
        ],
        max_byte_length: Some(
            10,
        ),
    },
    1: ArrayBufferView {
        kind: DataView,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

