tests/snapshots/serde__de_error_cause_obj.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Error(\"foo\", { cause: { a: 1 } })"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        name: Error,
        message: Some(
            OneByte("foo"),
        ),
        stack: Some(
            OneByte("Error: foo\n    at <anonymous>:1:1"),
        ),
        cause: Some(
            HeapReference(
                *1,
            ),
        ),
    },
    1: Object {
        OneByte("a"): I32(
            1,
        ),
    },
}

