tests/snapshots/serde__de_float32array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Float32Array(new ArrayBuffer(8, { maxByteLength: 12 })); a.set([1.0, -2.5]); a"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            128,
            63,
            0,
            0,
            32,
            192,
        ],
        max_byte_length: Some(
            12,
        ),
    },
    1: ArrayBufferView {
        kind: Float32Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

