tests/snapshots/serde__de_float64array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Float64Array(new ArrayBuffer(16, { maxByteLength: 24 })); a.set([1.0, -2.5]); a"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            240,
            63,
            0,
            0,
            0,
            0,
            0,
            0,
            4,
            192,
        ],
        max_byte_length: Some(
            24,
        ),
    },
    1: ArrayBufferView {
        kind: Float64Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

